--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
     </head>
     <body>
 
+        <header>
+            <nav>
+
+            </nav>
+        </header>
+
+        <main></main>
+
+        <footer></footer>
+
     </body>
 </html>
