--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="#">Pricing</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Sign in</a></li>
-                        <li><button type="button">Sign up</button></li>
+                        <li><button type="button"><i style="margin-right: 8px;" class="fab fa-google"> </i> Sign up</button></li>
                     </ul>
                 </div>
 
@@ -34,9 +34,9 @@
                         <h1>Understand, recognize and develop your people</h1>
                         <p>Teambit helps teams create a high performing culture with regular feedback.</p>
                         <div class="jumbo-bottoni">
-                            <button type="button">Sign up with Google</button>
+                            <button type="button"> <i style="color: #fff; margin-right: 8px;" class="fab fa-google"> </i> Sign up with Google</button>
                             <small> or </small>
-                            <button type="button">Sign up with Slack</button>
+                            <button type="button"> <i style="color: #fff; margin-right: 8px;" class="fab fa-slack"></i> Sign up with Slack</button>
                         </div>
                         <a href="#">or use your email address &rightarrow;</a>
                     </div>
@@ -54,6 +54,7 @@
 
         <footer></footer>
 
+    <script src="https://kit.fontawesome.com/03e5ee274f.js" crossorigin="anonymous"></script>
     </body>
 </html>
 
