Ridimensionamento immagini e ottimizzazione responsive CSS Grid

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>TeamBit</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="public/app.css">
@@ -50,7 +51,60 @@
 
         </header>
 
-        <main></main>
+        <main id="main-top">
+            <div class="container-2">
+                <h2>Traditional people processes lead to disengagement and turnover.</h2>
+
+                <section class="traditional-people">
+                    <div class="card card-1">
+                        <img src="asset/hardcore.png">
+                        <p>They are hardcore, formal and disconnected</p>
+                    </div>
+                    <div class="card card-2">
+                        <img src="asset/nofeedback.png">
+                        <p>They don't encourage regular feedback</p>
+                    </div>
+                    <div class="card card-3">
+                        <img src="asset/notsafe.png">
+                        <p>They don't make it safe to speak up</p>
+                    </div>
+                    <div class="card card-4">
+                        <img src="asset/before.png">
+                    </div>
+                </section>
+            </div>
+
+                                            <hr class="container">
+
+            <div class="container-2">
+                <h2>It doesn't have to be like that. Teambit is a modern solution that teammates love.</h2>
+
+                <section class="modern-people">
+                    <div class="card card-1">
+                        <img src="asset/lightweight.png">
+                        <p>It's lightweight fun and interconnected</p>
+                    </div>
+                    <div class="card card-2">
+                        <img src="asset/feedbacksuggestions.png">
+                        <p>It encourages regular feedback with contextual requests</p>
+                    </div>
+                    <div class="card card-3">
+                        <img src="asset/safe.png">
+                        <p>It creates a safe environment for dialog</p>
+                    </div>
+                    <div class="card card-4">
+                        <img src="asset/after.png">
+                    </div>
+                </section>
+
+                <h2>Here is how it works</h2>
+            </div>
+
+
+        </main>
+
+        <main id="main-bottom"></main>
+
 
         <footer></footer>
 
